working (pending clean)

--- a/index.html
+++ b/index.html
@@ -367,8 +367,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="tab-content " id="menu-protein"
-                                    data-background="https://machip3r.github.io/panzaverde-landingpage/assets/img/gray.png">
+                                <div class="tab-content " id="menu-protein" data-background="assets/img/gray.png">
                                     <div class="meals-plan-container text-white">
                                         <div
                                             class="meals desktop:gap-0.5 desktop:grid desktop:grid-cols-2 desktop:h-[800px]">
@@ -378,9 +377,9 @@
                                                 <div class="meal-name">
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="protein logo" class="logo protein w-[50%]"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="protein logo" class="logo protein w-[50%]"></noscript>
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="protein logo"
+                                                            class="logo protein w-[50%]"></noscript>
                                                 </div>
                                                 <div class="meal-description">
                                                     <p>Protein-packed menu filled with a variety of tasty ingredients,
@@ -395,9 +394,8 @@
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="plated-meal"
                                                         class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="plated-meal"
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="plated-meal"
                                                             class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"></noscript>
                                                 </div>
                                             </div>
@@ -442,8 +440,7 @@
                                     </div>
                                 </div>
 
-                                <div class="tab-content current" id="menu-keto"
-                                    data-background="https://machip3r.github.io/panzaverde-landingpage/assets/img/gray.png">
+                                <div class="tab-content current" id="menu-keto" data-background="assets/img/gray.png">
                                     <div class="meals-plan-container text-black">
                                         <div
                                             class="meals desktop:gap-0.5 desktop:grid desktop:grid-cols-2 desktop:h-[800px]">
@@ -452,9 +449,9 @@
                                                 <div class="meal-name">
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="keto logo" class="logo keto w-[50%]"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="keto logo" class="logo keto w-[50%]"></noscript>
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="keto logo"
+                                                            class="logo keto w-[50%]"></noscript>
                                                 </div>
                                                 <div class="meal-description">
                                                     <p>Higher in fats, lean with protein, and all low carb. Enjoyable
@@ -467,9 +464,8 @@
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="plated-meal"
                                                         class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="plated-meal"
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="plated-meal"
                                                             class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"></noscript>
                                                 </div>
                                             </div>
@@ -512,8 +508,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-content " id="menu-paleo"
-                                    data-background="https://machip3r.github.io/panzaverde-landingpage/assets/img/gray.png">
+                                <div class="tab-content " id="menu-paleo" data-background="assets/img/gray.png">
                                     <div class="meals-plan-container text-white">
                                         <div
                                             class="meals desktop:gap-0.5 desktop:grid desktop:grid-cols-2 desktop:h-[800px]">
@@ -522,9 +517,9 @@
                                                 <div class="meal-name">
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="paleo logo" class="logo paleo w-[50%]"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="paleo logo" class="logo paleo w-[50%]"></noscript>
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="paleo logo"
+                                                            class="logo paleo w-[50%]"></noscript>
                                                 </div>
                                                 <div class="meal-description">
                                                     <p>A menu made with delicious simplicity in mind. Food that
@@ -537,9 +532,8 @@
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="plated-meal"
                                                         class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="plated-meal"
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="plated-meal"
                                                             class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"></noscript>
                                                 </div>
                                             </div>
@@ -581,8 +575,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-content " id="menu-vegan-s"
-                                    data-background="https://machip3r.github.io/panzaverde-landingpage/assets/img/gray.png">
+                                <div class="tab-content " id="menu-vegan-s" data-background="assets/img/gray.png">
                                     <div class="meals-plan-container text-black">
                                         <div
                                             class="meals desktop:gap-0.5 desktop:grid desktop:grid-cols-2 desktop:h-[800px]">
@@ -591,9 +584,9 @@
                                                 <div class="meal-name">
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="vegan-s logo" class="logo vegan-s w-[50%]"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="vegan-s logo" class="logo vegan-s w-[50%]"></noscript>
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="vegan-s logo"
+                                                            class="logo vegan-s w-[50%]"></noscript>
                                                 </div>
                                                 <div class="meal-description">
                                                     <p>A perfect plant-based option with substance. A creative mix of
@@ -607,9 +600,8 @@
                                                     <img src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E"
                                                         alt="plated-meal"
                                                         class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"
-                                                        data-lazy-src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"><noscript><img
-                                                            src="https://machip3r.github.io/panzaverde-landingpage/assets/img/transparent.png"
-                                                            alt="plated-meal"
+                                                        data-lazy-src="assets/img/transparent.png"><noscript><img
+                                                            src="assets/img/transparent.png" alt="plated-meal"
                                                             class="max-w-[1000px] w-full desktop:w-[140%] bottom-0 desktop:mb-[-100px] desktop:pt-large desktop:pl-medium"></noscript>
                                                 </div>
                                             </div>
