--- a/refactor/index.html
+++ b/refactor/index.html
@@ -7,6 +7,9 @@
     <title>Panza Verde</title>
 
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main-global.css">
+
+    <script type='text/javascript' src='assets/js/jquery.min.js'></script>
 </head>
 
 <body>
@@ -42,7 +45,35 @@
             </div>
         </div>
     </header>
+    <div id="content" class="site-content">
+        <main id="main" class="site-main">
+            <div id="homepage" class=" overflow-hidden">
+                <section class="hero-full">
+                    <div data-bg="assets/img/gray.png" class="hero-full-screen rocket-lazyload" style="height: 80vh; ">
+                    </div>
+                    <div data-bg="assets/img/gray.png" class="hero-full-screen-mobile rocket-lazyload">
+                    </div>
+                    <div class="hero-cta-container" style="max-width: 900px;">
+                        <div class="hero-cta">
+                            <h1 class="header text-black desktop:text-white">
+                                HEALTHY IS EASY. CHEF-COOKED, ORGANICALLY-SOURCED MEALS, DELIVERED. </h1>
+                            <div class="sub-header-container">
+                                <p class="sub-header text-black desktop:text-white">
+                                    Ditch the meal kits and put your meal prep on autopilot with weekly
+                                    delivery. </p>
+                            </div>
+                            <a data-gtm='{ "event": "cta_click", "button_text": "View Meal Plans", "url": "#" }'
+                                href="#" class="btn primary small">
+                                View Meal Plans
+                            </a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
+    </div>
 </body>
+<script src="assets/js/jquery.main.js"></script>
 <script src="assets/js/main.js"></script>
 
 </html>
